[package]
name = "megolm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "#website#"
repository = "#repository#"
description = "#description#"
authors = ["bahrom04"]

# Dependencies that will included with final binary
[dependencies]
anyhow = "1.0.100"
vodozemac = "0.9.0"

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
